# batch_benchmark

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dlt_pipelines/: pipeline.py  synthetic_source.py
notebooks/: exploratory_analysis.ipynb
